--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/servlet.jar"/>
 	<classpathentry kind="lib" path="lib/swtgraphics2d.jar"/>
 	<classpathentry kind="lib" path="lib/jlibeps.jar"/>
+	<classpathentry kind="lib" path="lib/iText-5.0.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
